# vda-app

./: .gitignore  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
arc/: views.py
clients/: forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
documents/: enums.py  forms.py  models.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_alter_document_client.py
staff/: enums.py  forms.py  models.py  urls.py  views.py
staff/migrations/: 0001_initial.py  0002_alter_job_client_alter_staff_client.py
staticfiles/css/: login.css  styles.css
tools/: forms.py  models.py  urls.py  views.py
tools/migrations/: 0001_initial.py  0002_alter_calibrationtest_client_and_more.py
vda/: apps.py  context_processors.py  enums.py  forms.py  middleware.py  models.py  urls.py  views.py
vda/migrations/: 0001_initial.py  0002_remove_qualification_job_remove_staff_client_and_more.py  0002_staff.py  0003_job.py  0003_remove_toolequipment_client_delete_calibrationtest_and_more.py  0004_delete_document.py  0004_qualification.py  0005_delete_client.py  0005_toolequipment.py  0006_calibrationtest.py  0007_document.py
vda/templates/: 404.html  admin_dashboard.html  base.html  client_detail.html  client_list.html  competency.html  create_client.html  create_job.html  create_qualification.html  create_staff.html  create_tool_equipment.html  create_user.html  dashboard.html  document_list.html  edit_or_delete_job.html  edit_or_delete_qualification.html html  index.html  (+9 more)
vda_app/: asgi.py  settings.py  urls.py  wsgi.py
(+25 files in other folders)
